# cpp-mirror-leech-bot

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  continuous_integration.yml  docker.yml  release.yml  sanitizers.yml  static_analysis.yml
cmake/: cmlb_helpers.cmake  coverage.cmake  packaging.cmake  sanitizers.cmake  version.cmake  warnings.cmake
docs/: README.md  architecture.md  command_reference.md  configuration_reference.md  deployment_quickstart.md  runbook.md  throughput_benchmarks.md  wiki.md
docs/adr/: 0001-async-model-asio-coroutines.md  0002-persistence-sqlite-wal.md  0003-telegram-gateway-isolation.md  0004-build-system-vcpkg-manifest.md  0005-warnings-as-errors-symmetric.md  0006-no-i-prefix-naming.md  0007-performance-tuning.md  0008-error-model-result-and-app-error.md  0009-five-layer-ddd-layering.md  0010-security-boundary-and-credential-handling.md  0011-forward-only-schema-migrations.md  0012-ci-tdlib-include-probe.md  0013-tdlib-overlay-pin.md
include/cmlb/: version.hpp.in
include/cmlb/application/: active_task_registry.hpp  cancel_task.hpp  clone_drive_resource.hpp  count_drive_resource.hpp  delete_drive_resource.hpp  leech_url.hpp  mirror_url.hpp  pause_task.hpp  progress_renderer_interface.hpp  resume_task.hpp  rss_subscription.hpp  (+4 more)
include/commands/: command_router.hpp
include/core/: bot_engine.hpp  config.hpp  logger.hpp  types.hpp
include/db/: database.hpp
include/downloaders/: aria2_client.hpp  idownloader.hpp
include/uploaders/: iuploader.hpp  rclone_uploader.hpp  telegram_uploader.hpp
include/utils/: archive_handler.hpp  media_processor.hpp  rss_monitor.hpp  status_manager.hpp
packaging/: .env.example  Dockerfile  docker-compose.yml
packaging/debian/: control
packaging/systemd/: cmlb.service
scripts/: bootstrap_linux.sh  bootstrap_macos.sh  bootstrap_windows.ps1  download_runtime_dependencies.sh  format_codebase.sh  generate_coverage_report.sh  run_static_analysis.sh  update_tdlib_overlay.sh
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt  cancel_task.cpp  clone_drive_resource.cpp  count_drive_resource.cpp  delete_drive_resource.cpp  leech_url.cpp  mirror_url.cpp  pause_task.cpp  resume_task.cpp  rss_subscription.cpp  show_stats.cpp  show_status.cpp  update_bot_settings.cpp  update_user_settings.cpp
src/commands/: command_router.cpp
src/core/: CMakeLists.txt  bot_engine.cpp  cancellation.cpp  configuration.cpp  error.cpp  executor.cpp  formatting.cpp  logger.cpp
src/db/: database.cpp
src/domain/: CMakeLists.txt  authority.cpp  task.cpp
src/downloaders/: aria2_client.cpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/download/: CMakeLists.txt  aria2_downloader.cpp  downloader_interface.cpp  qbittorrent_downloader.cpp
src/infrastructure/http/: CMakeLists.txt  beast_http_client.cpp
src/infrastructure/media/: CMakeLists.txt  ffmpeg_media_processor.cpp  seven_zip_archive_processor.cpp
src/infrastructure/persistence/: CMakeLists.txt  schema_migrator.cpp  sqlite_bot_settings_repository.cpp  sqlite_connection_pool.cpp  sqlite_rss_feed_repository.cpp  sqlite_task_repository.cpp  sqlite_user_settings_repository.cpp  time_codec.hpp
src/infrastructure/persistence/migrations/: V0001__initial_schema.sql  V0002__rss_feeds.sql  V0003__task_downloader_attachment.sql
src/infrastructure/rss/: CMakeLists.txt  rss_document_parser.cpp  rss_feed_poller.cpp
src/infrastructure/system/: CMakeLists.txt  signal_handler.cpp  subprocess.cpp  system_metrics.cpp
src/infrastructure/telegram/: CMakeLists.txt  authentication_flow.cpp  messenger.cpp  telegram_gateway.cpp  telegram_gateway_stub.cpp  update_router.cpp
src/infrastructure/upload/: CMakeLists.txt  google_drive_uploader.cpp  rclone_uploader.cpp  telegram_uploader.cpp
src/presentation/: CMakeLists.txt  callback_dispatcher.cpp  command_dispatcher.cpp  command_parser.cpp  html_renderer.cpp  progress_renderer.cpp
src/uploaders/: rclone_uploader.cpp  telegram_uploader.cpp
src/utils/: archive_handler.cpp  media_processor.cpp  rss_monitor.cpp  status_manager.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  aria2_downloader_test.cpp  beast_http_client_test.cpp  ffmpeg_media_processor_test.cpp  qbittorrent_downloader_test.cpp  schema_migrator_test.cpp  seven_zip_archive_processor_test.cpp  sqlite_task_repository_test.cpp
tests/support/: in_memory_bot_settings_repository.hpp  in_memory_rss_feed_repository.hpp  in_memory_task_repository.hpp  in_memory_user_settings_repository.hpp  stub_downloader.hpp  stub_drive_resource_operations.hpp  stub_messenger.hpp  stub_uploader.hpp
tests/unit/: CMakeLists.txt
tests/unit/application/: CMakeLists.txt  cancel_task_test.cpp  mirror_url_test.cpp  rss_subscription_test.cpp  show_stats_test.cpp  show_status_test.cpp  update_user_settings_test.cpp
tests/unit/core/: CMakeLists.txt  configuration_test.cpp  error_test.cpp  formatting_test.cpp  logger_test.cpp
tests/unit/domain/: CMakeLists.txt  authority_test.cpp  identifiers_test.cpp  task_state_machine_test.cpp
tests/unit/infrastructure/: CMakeLists.txt
tests/unit/infrastructure/media/: CMakeLists.txt
tests/unit/infrastructure/rss/: CMakeLists.txt  rss_document_parser_test.cpp
tests/unit/infrastructure/system/: CMakeLists.txt  subprocess_test.cpp  system_metrics_test.cpp
tests/unit/infrastructure/telegram/: CMakeLists.txt  messenger_test.cpp
tests/unit/presentation/: CMakeLists.txt  callback_dispatcher_test.cpp  command_dispatcher_test.cpp  command_parser_test.cpp  html_renderer_test.cpp  progress_renderer_test.cpp
vcpkg-overlays/tdlib/: portfile.cmake  vcpkg.json
(+49 files in other folders)
